Updates to nav and hero

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>John Lusky's Boilerplate - 2016</title>
+        <title>Tread Natural</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -31,6 +31,12 @@
         <div id="main-contain">
 
             <section id="hero">
+
+                <h2 id="big-cta">
+                    <span class="large">The world is round.</span>
+                    <span class="medium">Your treadmill isn't.</span>
+                    <span class="small">We can help you with that.</span>
+                </h2>
 
                 <figure class="logo-w-shadow"></figure>
 
