--- a/index.html
+++ b/index.html
@@ -44,7 +44,17 @@
 
             </section>
 
-            <section id="about-the-device"></figure>
+            <section id="about-the-device">
+
+            </section>
+
+            <section id="gallery">
+
+            </section>
+
+            <section id="faqs">
+
+            </section>
 
         </div>
 
