Added gallery, faqs, and testimonials sections

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </section>
 
             <section id="about-the-device">
-                <div class="wrap">
+                <div class="wrap flex-elements">
 
                     <article class="content left">
                         <h3>About The Device</h3>
@@ -67,15 +67,103 @@
             </section>
 
             <section id="gallery">
+                <div class="wrap">
 
+                    <h3>Gallery</h3>
+
+                    <div class="media-slider">
+                        <div>
+                            <img src="images/photo-power-console.jpg" alt="Power Console Photo">
+                        </div>
+                        <div>
+                            <img src="images/photo-power-console.jpg" alt="Power Console Photo">
+                        </div>
+                        <div>
+                            <img src="images/photo-power-console.jpg" alt="Power Console Photo">
+                        </div>
+                        <div>
+                            <img src="images/photo-power-console.jpg" alt="Power Console Photo">
+                        </div>
+                        <div>
+                            <img src="images/photo-power-console.jpg" alt="Power Console Photo">
+                        </div>
+                        <div>
+                            <img src="images/photo-power-console.jpg" alt="Power Console Photo">
+                        </div>
+                    </div>
+
+                </div>
             </section>
 
             <section id="faqs">
+                <div class="wrap">
 
+                    <h3>FAQs</h3>
+
+                    <div id="accordion">
+                        <h4 class="accordion-toggle">1. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor?</h4>
+                        <div class="accordion-content default">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+
+                        <h4 class="accordion-toggle">2. Lorem ipsum dolor?</h4>
+                        <div class="accordion-content">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+
+                        <h4 class="accordion-toggle">3. Lorem ipsum dolor sit amet, consectetur?</h4>
+                        <div class="accordion-content">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+
+                        <h4 class="accordion-toggle">4. Lorem ipsum dolor?</h4>
+                        <div class="accordion-content">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+
+                        <h4 class="accordion-toggle">5. Lorem ipsum dolor sit amet, consectetur?</h4>
+                        <div class="accordion-content">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+
+                        <h4 class="accordion-toggle">6. Lorem ipsum dolor?</h4>
+                        <div class="accordion-content">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+
+                        <h4 class="accordion-toggle">7. Lorem ipsum dolor sit amet, consectetur?</h4>
+                        <div class="accordion-content">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                    </div>
+
+                </div>
             </section>
 
             <section id="testimonials">
+                <h3>Testimonials</h3>
 
+                <div class="wrap flex-elements">
+
+                    <article class="content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </article>
+
+                    <article class="content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </article>
+
+                    <article class="content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </article>
+
+                </div>
             </section>
 
             <section id="footer">
@@ -90,6 +178,8 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
 
         <script src="js/vendor/jquery.vide.min.js"></script>
+        <script type="text/javascript" src="js/vendor/slick.min.js"></script>
+
         <script src="js/plugins.js"></script>
         <script src="js/app.min.js"></script>
 
